# S_Project

./: Cargo.toml  README.md
todo_app/: Cargo.toml  README.md  task.json
todo_app/public/: index.html
todo_app/src/: main.rs  todo.rs
todo_app_v2/: Cargo.toml
todo_app_v2/src/: lib.rs  main.rs
url-shortener/: Cargo.toml
url-shortener/src/: main.rs
